openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-app
spec:
  to:
    kind: Service
    name: grad-project-service
  port:
    targetPort: 8082
  tls:
    termination: edge
  wildcardPolicy: None
